Lagde ny UI med choose level muligheter