@@ -16,8 +16,8 @@ public class Board {
 	
 	private Tile[][] board; // to-dimensjonalt array
 
-	private final List<Integer> levels = List.of(10,25,35); // str på brett utifra vanskelighetsgrad
-	private final List<Integer> numberOfMines = Arrays.asList(10,40,100); // antall miner utifra vanskelighetsgrad
+	private final List<Integer> levels = List.of(10,20,25); // str på brett utifra vanskelighetsgrad
+	private final List<Integer> numberOfMines = Arrays.asList(10,30,50); // antall miner utifra vanskelighetsgrad
 
 	private int size; //faktisk brettstørrelse
 	private int numOfMines; //faktisk antall miner
@@ -106,8 +106,7 @@ public class Board {
 				gridPane.add(tile, x, y); // legger til tilpå posisjon i gridpane
 			}
 		}
-		
-		gridPane.setPrefSize(400, 400); // setter ønsket størrelse på gridPane
+		gridPane.setPrefSize(800, 800);
 	}
 		
 	public void openEmptyTiles(int x, int y) {
